--- a/link/adenium/index.html
+++ b/link/adenium/index.html
@@ -55,7 +55,7 @@
 
 </main>
         <nav>
-            <button class="styledbutton"><a href="../../Index.html">Retourner sur la page d'accueil</a></button>
+            <button class="styledbutton"><a href="../../index.html">Retourner sur la page d'accueil</a></button>
         </nav>
 
     </body>
