--- a/link/aloe/index.html
+++ b/link/aloe/index.html
@@ -57,7 +57,7 @@
 
 
         <nav>
-            <button class="styledbutton"><a href="../../Index.html">Retourner sur la page d'accueil</a></button>
+            <button class="styledbutton"><a href="../../index.html">Retourner sur la page d'accueil</a></button>
         </nav>
 
     </body>
