--- a/link/autrescactus/index.html
+++ b/link/autrescactus/index.html
@@ -71,7 +71,7 @@
         </div>
 
         <nav>
-            <button class="styledbutton"><a href="../../Index.html">Retourner sur la page d'accueil</a></button>
+            <button class="styledbutton"><a href="../../index.html">Retourner sur la page d'accueil</a></button>
         </nav>
 
     </body>
