--- a/link/autressucculentes/index.html
+++ b/link/autressucculentes/index.html
@@ -38,7 +38,7 @@
             </tbody>
         </table>
         <nav>
-            <button class="styledbutton"><a href="../../Index.html">Retourner sur la page d'accueil</a></button>
+            <button class="styledbutton"><a href="../../index.html">Retourner sur la page d'accueil</a></button>
         </nav>
 
     </body>
